--- a/Tests/Fixtures/AcmeDemoBundle/Resources/fixtures/example_1.yml
+++ b/Tests/Fixtures/AcmeDemoBundle/Resources/fixtures/example_1.yml
@@ -1,4 +1,4 @@
-Publero\YamlFixturesBundle\Tests\Fixtures\DataTransformer\ExampleObject:
+Pecserke\YamlFixturesBundle\Tests\Fixtures\DataTransformer\ExampleObject:
     order: 3
     equal_condition: [ publicProperty ]
     data:
