--- a/composer.json
+++ b/composer.json
@@ -18,22 +18,23 @@
     "target-dir": "Pecserke/YamlFixturesBundle",
     "require": {
         "php": ">=5.3.2",
-        "symfony/http-kernel": ">=2.1,<2.2",
-        "symfony/dependency-injection": ">=2.1,<2.2",
-        "symfony/config": ">=2.1,<2.2",
-        "symfony/console": ">=2.1,<2.2",
-        "symfony/filesystem": ">=2.1,<2.2",
-        "symfony/yaml": ">=2.1,<2.2",
-        "doctrine/data-fixtures": "*"
+        "doctrine/data-fixtures": "1.*@alpha",
+        "symfony/http-kernel": ">=2.1,<2.3",
+        "symfony/dependency-injection": ">=2.1,<2.3",
+        "symfony/config": ">=2.1,<2.3",
+        "symfony/console": ">=2.1,<2.3",
+        "symfony/filesystem": ">=2.1,<2.3",
+        "symfony/yaml": ">=2.1,<2.3",
+        "symfony/property-access": "2.2.*"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "*",
-        "doctrine/orm": "*",
+        "doctrine/orm": "2.3.*",
         "doctrine/mongodb-odm": "*"
     },
     "suggest": {
         "doctrine/orm": "Support for relation database fixtures",
         "doctrine/mongodb-odm": "Support for mongo database fixtures"
-    }
+    },
     "minimum-stability": "dev"
 }
