--- a/composer.json
+++ b/composer.json
@@ -19,17 +19,17 @@
     "require": {
         "php": ">=5.3.2",
         "doctrine/data-fixtures": "1.*@alpha",
-        "symfony/http-kernel": ">=2.1,<2.3",
-        "symfony/dependency-injection": ">=2.1,<2.3",
-        "symfony/config": ">=2.1,<2.3",
-        "symfony/console": ">=2.1,<2.3",
-        "symfony/filesystem": ">=2.1,<2.3",
-        "symfony/yaml": ">=2.1,<2.3",
-        "symfony/property-access": "2.2.*"
+        "symfony/http-kernel": ">=2.1,<2.4",
+        "symfony/dependency-injection": ">=2.1,<2.4",
+        "symfony/config": ">=2.1,<2.4",
+        "symfony/console": ">=2.1,<2.4",
+        "symfony/filesystem": ">=2.1,<2.4",
+        "symfony/yaml": ">=2.1,<2.4",
+        "symfony/property-access": ">2.1,<2.4"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "*",
-        "doctrine/orm": "2.3.*",
+        "doctrine/orm": ">2.2,<2.4-dev",
         "doctrine/mongodb-odm": "*"
     },
     "suggest": {
