--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,15 @@
     },
     "target-dir": "Pecserke/YamlFixturesBundle",
     "require": {
-        "php": ">=5.3.2",
+        "php": ">=5.3.3",
         "doctrine/data-fixtures": "1.*@alpha",
-        "symfony/http-kernel": ">=2.1,<2.3",
-        "symfony/dependency-injection": ">=2.1,<2.3",
-        "symfony/config": ">=2.1,<2.3",
-        "symfony/console": ">=2.1,<2.3",
-        "symfony/filesystem": ">=2.1,<2.3",
-        "symfony/yaml": ">=2.1,<2.3",
-        "symfony/property-access": "2.2.*"
+        "symfony/http-kernel": ">=2.3,<2.4",
+        "symfony/dependency-injection": ">=2.3,<2.4",
+        "symfony/config": ">=2.3,<2.4",
+        "symfony/console": ">=2.3,<2.4",
+        "symfony/filesystem": ">=2.3,<2.4",
+        "symfony/yaml": ">=2.3,<2.4",
+        "symfony/property-access": ">=2.3,<2.4"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "*",
