--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ php:
     - 5.4
 
 env:
-    - SYMFONY_VERSION=dev-master
+    - SYMFONY_VERSION=2.3
 
 before_script:
+    - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - curl -s http://getcomposer.org/installer | php
     - php composer.phar install --dev
 
