--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,12 @@ env:
     - SYMFONY_VERSION=2.3
 
 before_script:
+    # Set the GitHub OAuth token to make use of the 6000 per hour rate limit
+    - "mkdir -p ~/.composer"
+    - cp .travis.composer.config.json ~/.composer/config.json
+    # enable extentions
     - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+    # install composer
     - curl -s http://getcomposer.org/installer | php
     - php composer.phar install --dev
 
