--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "symfony/property-access": "2.2.*"
     },
     "require-dev": {
-        "doctrine/doctrine-bundle": "*",
+        "doctrine/doctrine-bundle": ">=1.1.0,<=1.2.0-beta1",
         "doctrine/orm": "2.3.*",
         "doctrine/mongodb-odm": "*"
     },
