--- a/composer.json
+++ b/composer.json
@@ -19,18 +19,18 @@
     "require": {
         "php": ">=5.3.3",
         "doctrine/data-fixtures": "1.*@alpha",
-        "symfony/framework-bundle": ">=2.3,<2.4",
-        "symfony/http-kernel": ">=2.3,<2.4",
-        "symfony/dependency-injection": ">=2.3,<2.4",
-        "symfony/config": ">=2.3,<2.4",
-        "symfony/console": ">=2.3,<2.4",
-        "symfony/filesystem": ">=2.3,<2.4",
-        "symfony/yaml": ">=2.3,<2.4",
-        "symfony/property-access": ">=2.3,<2.4"
+        "symfony/framework-bundle": ">=2.3,<3.0",
+        "symfony/http-kernel": ">=2.3,<3.0",
+        "symfony/dependency-injection": ">=2.3,<3.0",
+        "symfony/config": ">=2.3,<3.0",
+        "symfony/console": ">=2.3,<3.0",
+        "symfony/filesystem": ">=2.3,<3.0",
+        "symfony/yaml": ">=2.3,<3.0",
+        "symfony/property-access": ">=2.3,<3.0"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "*",
-        "doctrine/orm": "2.3.*",
+        "doctrine/orm": ">=2.3, <3.0",
         "doctrine/mongodb-odm": "1.0.*"
     },
     "suggest": {
