--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,18 @@
 language: php
 
 php:
-    - 5.4
-    - 5.3
+  - 5.3.3
+  - 5.3
+  - 5.4
+  - 5.5
 
 env:
     - SYMFONY_VERSION=2.3
 
 before_script:
-    - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+    - echo "extension=mongo.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
     - curl -s http://getcomposer.org/installer | php
+    - php composer.phar require symfony/framework-bundle:${SYMFONY_VERSION}
     - php composer.phar install --dev -n --prefer-dist
 
 notifications:
