--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ before_script:
     - echo "extension=mongo.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
     - curl -s http://getcomposer.org/installer | php
     - php composer.phar require symfony/framework-bundle:${SYMFONY_VERSION}
-    - php composer.phar install --dev -n --prefer-dist
+    - export PREFER="--prefer-$(if [ `php -v | grep 5.3.3 -c` -eq 0 ]; then echo 'source'; else echo 'dist'; fi)"
+    - php composer.phar install --no-interaction $PREFER --dev
 
 notifications:
     email:
