--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,7 @@ env:
 before_script:
     - echo "extension=mongo.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
     - curl -s http://getcomposer.org/installer | php
-    - export PREFER="--prefer-$(if [ `php -v | grep 5.3.3 -c` -eq 0 ]; then echo 'source'; else echo 'dist'; fi)"
-    - php composer.phar require symfony/framework-bundle:${SYMFONY_VERSION} $PREFER
-    - php composer.phar install --no-interaction $PREFER --dev
+    - php composer.phar require symfony/framework-bundle:${SYMFONY_VERSION} --prefer-source
 
 notifications:
     email:
