--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "require-dev": {
         "doctrine/doctrine-bundle": "*",
         "doctrine/orm": ">=2.3, <3.0",
-        "doctrine/mongodb-odm": "1.0.*"
+        "doctrine/mongodb-odm": "1.0.*",
+        "phpunit/phpunit": "~4.3"
     },
     "suggest": {
         "doctrine/orm": "Support for relation database fixtures",
