--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ php:
     - 5.6
     - hhvm
 
+matrix:
+    allow_failures:
+        - php: hhvm
+
 env:
     - SYMFONY_VERSION=2.3
     - SYMFONY_VERSION=2.4
@@ -15,8 +19,13 @@ env:
     - SYMFONY_VERSION=2.6.0-BETA1
 
 before_script:
-    - echo "extension=mongo.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
-    - if [ $(php -v | grep '5.3.3' -c) -ne 0 ]; then export PREFER="--prefer-source"; else PREFER="--prefer-dist"; fi
+    - |
+        if (php --version | grep -i HipHop > /dev/null); then
+            echo "Skipping adding mongo extension to php on HHVM"
+        else
+            echo "extension=mongo.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
+        fi
+    - |if [ $(php -v | grep '5.3.3' -c) -ne 0 ]; then export PREFER="--prefer-source"; else PREFER="--prefer-dist"; fi
     - composer require symfony/framework-bundle:${SYMFONY_VERSION} ${PREFER} --no-interaction --no-progress
 
 notifications:
