separated yaml fixture locator into BundleResourcesLocator & FilesystemLocator, and added tests for them

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 composer.lock
 composer.phar
-phpunit.xml
 Tests/autoload.php
 Tests/Fixtures/app/cache/*
 Tests/Fixtures/app/logs/*
-catalog.xml
-vendor/*
+vendor/
