--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,20 @@ php:
     - 5.3
     - 5.4
     - 5.5
+    - 5.6
+    - hhvm
 
 env:
     - SYMFONY_VERSION=2.3
     - SYMFONY_VERSION=2.4
     - SYMFONY_VERSION=2.5
+    - SYMFONY_VERSION=2.6
 
 before_script:
-    - echo "extension=mongo.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
+    - bin/ci/install_mongo.sh
     - if [ $(php -v | grep '5.3.3' -c) -ne 0 ]; then export PREFER="--prefer-source"; else PREFER="--prefer-dist"; fi
     - composer require symfony/framework-bundle:${SYMFONY_VERSION} ${PREFER} --no-interaction --no-progress
 
 notifications:
     email:
-        - tomas@pecserke.eu
+        - tomas.pecserke@gmail.com
