--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ php:
     #- 5.6
     - hhvm
 
+matrix:
+    allow_failures:
+        - php: hhvm
+
 env:
 #    - SYMFONY_VERSION=2.3
 #    - SYMFONY_VERSION=2.4
@@ -15,8 +19,9 @@ env:
     - SYMFONY_VERSION=2.6
 
 before_install:
+    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
     - sudo apt-get update -qq
-    - sudo apt-get install -y hhvm-dev g++
+    - sudo apt-get install -qq hhvm-dev g++-4.8
 
 before_script:
     - bin/ci/install_mongo.sh
