--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,7 @@ env:
     - SYMFONY_VERSION=2.6
 
 before_install:
-    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-    - sudo apt-get update -qq
-    - sudo apt-get install -qq hhvm-dev g++-4.8
+    - if (php --version | grep -i HipHop > /dev/null); then sudo bin/ci/install_g++.sh; fi
 
 before_script:
     - bin/ci/install_mongo.sh
