--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ env:
 
 before_install:
     - if (php --version | grep -i HipHop > /dev/null); then sudo bin/ci/install_g++.sh; fi
-    - if (php --version | grep -i HipHop > /dev/null); then sudo touch /etc/hhvm/php.ini; chmod ugo +rw /etc/hhvm/php.ini; fi
+    - if (php --version | grep -i HipHop > /dev/null); then sudo touch /etc/hhvm/php.ini; sudo chmod ugo +rw /etc/hhvm/php.ini; fi
 
 before_script:
     - bin/ci/install_mongo.sh
