reorganizing .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,25 +11,30 @@ php:
 matrix:
     allow_failures:
         - php: hhvm
-        - env: SYMFONY_VERSION=2.7@dev
 
 env:
     - SYMFONY_VERSION=2.3
     - SYMFONY_VERSION=2.4
     - SYMFONY_VERSION=2.5
     - SYMFONY_VERSION=2.6
-    - SYMFONY_VERSION=2.7@dev
 
 before_install:
-    - if (php --version | grep -i HipHop > /dev/null); then sudo bin/ci/install_g++.sh; fi
-    - sudo mkdir /etc/hhvm -p
-    - sudo touch /etc/hhvm/php.ini
-    - sudo chmod ugo+rw /etc/hhvm/php.ini
+    - |
+        if (php --version | grep -i HipHop > /dev/null); then
+            sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+            sudo apt-get update -qq
+
+            sudo mkdir /etc/hhvm -p
+            sudo touch /etc/hhvm/php.ini
+            sudo chmod ugo+rw /etc/hhvm/php.ini
+        fi
+
+install:
+    - bin/ci/install_mongo.sh
 
 before_script:
-    - bin/ci/install_mongo.sh
     - if [ $(php -v | grep '5.3.3' -c) -ne 0 ]; then export PREFER="--prefer-source"; else PREFER="--prefer-dist"; fi
-    - composer require symfony/symfony:${SYMFONY_VERSION} ${PREFER} --no-interaction --no-progress
+    - composer require symfony/framework-bundle:${SYMFONY_VERSION} ${PREFER} --no-interaction --no-progress
 
 notifications:
     email:
