--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,7 @@
         "jackalope/jackalope-doctrine-dbal": "*",
         "doctrine/phpcr-odm": "~1.2",
         "doctrine/phpcr-bundle": "~1.2",
-        "phpunit/phpunit": "~4.3",
-        "mikey179/vfsStream": "~1"
+        "phpunit/phpunit": "~4.3"
     },
     "suggest": {
         "doctrine/doctrine-bundle": "Support for relational database fixtures",
