--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,16 @@ php:
     - 5.3
     - 5.4
     - 5.5
+    - 5.6
+    - 7
 
 env:
     - SYMFONY_VERSION=2.3
     - SYMFONY_VERSION=2.4
     - SYMFONY_VERSION=2.5
+    - SYMFONY_VERSION=2.6
+    - SYMFONY_VERSION=2.7
+    - SYMFONY_VERSION=2.8
 
 before_script:
     - echo "extension=mongo.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
