--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 language: php
 
 php:
-    - 5.3.3
+    - 5.3.9
     - 5.3
     - 5.4
     - 5.5
     - 5.6
     - 7
+    - hhvm
+
+matrix:
+    allow_failures:
+        - php: hhvm
+
+services: mongodb
 
 env:
     - SYMFONY_VERSION=2.3
@@ -17,7 +24,7 @@ env:
     - SYMFONY_VERSION=2.8
 
 before_script:
-    - echo "extension=mongo.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
+    - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - if [ $(php -v | grep '5.3.3' -c) -ne 0 ]; then export PREFER="--prefer-source"; else PREFER="--prefer-dist"; fi
     - composer require symfony/framework-bundle:${SYMFONY_VERSION} ${PREFER} --no-interaction --no-progress
 
