--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
 cache:
     directories:
         - $HOME/.composer/cache
+        - vendor
 
 before_script:
     - phpenv config-rm xdebug.ini
