--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,15 @@ env:
     - SYMFONY_VERSION=2.7
     - SYMFONY_VERSION=2.8
 
+cache:
+    directories:
+        - $HOME/.composer/cache
+
 before_script:
+    - phpenv config-rm xdebug.ini
     - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-    - if [ $(php -v | grep '5.3.3' -c) -ne 0 ]; then export PREFER="--prefer-source"; else PREFER="--prefer-dist"; fi
     - composer require symfony/framework-bundle:${SYMFONY_VERSION} ${PREFER} --no-interaction --no-progress
 
 notifications:
     email:
-        - tomas@pecserke.eu
+        - tomas.pecserke@gmail.com
