--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Tomáš Pecsérke",
-            "email": "tomas@pecserke.eu",
+            "email": "tomas.pecserke@gmail.com",
             "role": "Developer"
         }
     ],
@@ -18,7 +18,7 @@
     "target-dir": "Pecserke/YamlFixturesBundle",
     "require": {
         "php": ">=5.3.9",
-        "doctrine/data-fixtures": "1.*@alpha",
+        "doctrine/data-fixtures": ">=1.1",
         "symfony/framework-bundle": ">=2.3,<3.0",
         "symfony/http-kernel": ">=2.3,<3.0",
         "symfony/dependency-injection": ">=2.3,<3.0",
@@ -31,7 +31,7 @@
     "require-dev": {
         "doctrine/doctrine-bundle": "*",
         "doctrine/orm": ">=2.3, <3.0",
-        "doctrine/mongodb-odm": "1.0.*",
+        "doctrine/mongodb-odm": ">=1.0.*",
         "phpunit/phpunit": "~4.3"
     },
     "suggest": {
