--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,42 @@
+sudo: false
 language: php
 
 php:
-    - 5.3.9
     - 5.3
     - 5.4
     - 5.5
     - 5.6
-    - 7
+    - 7.0
     - hhvm
 
 matrix:
+    fast_finish: true
+    include:
+        - php: 5.3
+          env: COMPOSER_FLAGS="--prefer-lowest"
+        - php: 5.6
+          env: SYMFONY_VERSION=2.3.*
+        - php: 5.6
+          env: SYMFONY_VERSION=2.7.*
+        - php: 5.6
+          env: SYMFONY_VERSION=2.8.*
+        - php: 5.6
+          env: SYMFONY_VERSION=3.0.*
     allow_failures:
         - php: hhvm
-
-services: mongodb
-
-env:
-    - SYMFONY_VERSION=2.3
-    - SYMFONY_VERSION=2.4
-    - SYMFONY_VERSION=2.5
-    - SYMFONY_VERSION=2.6
-    - SYMFONY_VERSION=2.7
-    - SYMFONY_VERSION=2.8
 
 cache:
     directories:
         - $HOME/.composer/cache
 
-before_script:
-    - phpenv config-rm xdebug.ini
-    - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
-    - composer require symfony/framework-bundle:${SYMFONY_VERSION} ${PREFER} --no-interaction --no-progress
+before_install:
+    - echo TRAVIS_PHP_VERSION = $TRAVIS_PHP_VERSION
+    - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]]; then phpenv config-rm xdebug.ini; fi
+    - if [[ $TRAVIS_PHP_VERSION = 5.* ]]; then echo "extension=mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; else COMPOSER_FLAGS="$COMPOSER_FLAGS --ignore-platform-reqs"; fi
+    - composer self-update
+    - if [[ "$SYMFONY_VERSION" != "" ]]; then composer require "symfony/framework-bundle:${SYMFONY_VERSION}" --no-update; fi
+
+install: composer update --prefer-dist --no-interaction $COMPOSER_FLAGS
 
 notifications:
     email:
