--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "doctrine/doctrine-bundle": "*",
         "doctrine/orm": ">=2.2",
         "doctrine/mongodb-odm": "~1.0",
-        "phpunit/phpunit": ">=4.3"
+        "phpunit/phpunit": ">=4.3",
+        "satooshi/php-coveralls": "~1.0"
     },
     "suggest": {
         "doctrine/orm": "Support for relation database fixtures",
