--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "doctrine/orm": ">=2.2",
         "doctrine/mongodb-odm": "~1.0",
         "phpunit/phpunit": ">=4.3",
+        "alcaeus/mongo-php-adapter": "^1.0.3",
         "satooshi/php-coveralls": "~1.0"
     },
     "suggest": {
