--- a/.travis.yml
+++ b/.travis.yml
@@ -31,13 +31,18 @@ cache:
         - vendor
 
 before_install:
-    - echo TRAVIS_PHP_VERSION = $TRAVIS_PHP_VERSION
-    - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]]; then phpenv config-rm xdebug.ini; fi
     - if [[ $TRAVIS_PHP_VERSION = 5.* ]]; then echo "extension=mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; else COMPOSER_FLAGS="$COMPOSER_FLAGS --ignore-platform-reqs"; fi
+    - if [[ $TRAVIS_PHP_VERSION = 5.* ]]; then composer remove --dev alcaeus/mongo-php-adapter --no-update; fi
     - composer self-update
     - if [[ "$SYMFONY_VERSION" != "" ]]; then composer require "symfony/framework-bundle:${SYMFONY_VERSION}" --no-update; fi
 
 install: composer update --prefer-dist --no-interaction $COMPOSER_FLAGS
+
+script:
+    - php vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+
+after_success:
+    - travis_retry php vendor/bin/coveralls
 
 notifications:
     email:
