--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "doctrine/orm": ">=2.2",
         "doctrine/mongodb-odm": "~1.0",
         "phpunit/phpunit": ">=4.3",
+        "alcaeus/mongo-php-adapter": "^1.0.3",
         "satooshi/php-coveralls": "~1.0"
     },
     "suggest": {
@@ -39,5 +40,10 @@
         "doctrine/mongodb-odm": "Support for mongo database fixtures",
         "alcaeus/mongo-php-adapter": "PHP 7 bridge for ext-mongo using ext-mongodb"
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    }
 }
