--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "doctrine/mongodb-odm": "~1.0",
         "phpunit/phpunit": ">=4.3",
         "alcaeus/mongo-php-adapter": "^1.0.3",
-        "satooshi/php-coveralls": "~1.0"
+        "satooshi/php-coveralls": "~1.0",
+        "mikey179/vfsStream": "~1.0"
     },
     "suggest": {
         "doctrine/orm": "Support for relation database fixtures",
