--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "symfony/filesystem": "~2.3|~3.0",
         "symfony/yaml": "~2.3|~3.0",
         "symfony/property-access": "~2.3|~3.0",
-        "symfony/finder": "~2.0|~3.0"
+        "symfony/finder": "^2.0.5|~3.0"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "*",
