--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "symfony/console": "~2.3|~3.0",
         "symfony/filesystem": "~2.3|~3.0",
         "symfony/yaml": "~2.3|~3.0",
-        "symfony/property-access": "~2.3|~3.0"
+        "symfony/property-access": "~2.3|~3.0",
+        "symfony/finder": "^2.0.5|~3.0"
     },
     "require-dev": {
         "doctrine/doctrine-bundle": "*",
