--- a/.travis.yml
+++ b/.travis.yml
@@ -2,28 +2,14 @@ sudo: false
 language: php
 
 php:
-    - 5.3
-    - 5.4
-    - 5.5
-    - 5.6
-    - 7.0
-    - hhvm
+    - '7.2'
+    - '7.3'
 
 matrix:
-    fast_finish: true
+    fast_finish: false
     include:
-        - php: 5.3
+        - php: '7.2'
           env: COMPOSER_FLAGS="--prefer-lowest"
-        - php: 5.6
-          env: SYMFONY_VERSION=2.3.*
-        - php: 5.6
-          env: SYMFONY_VERSION=2.7.*
-        - php: 5.6
-          env: SYMFONY_VERSION=2.8.*
-        - php: 5.6
-          env: SYMFONY_VERSION=3.0.*
-    allow_failures:
-        - php: hhvm
 
 cache:
     directories:
@@ -31,8 +17,7 @@ cache:
         - vendor
 
 before_install:
-    - if [[ $TRAVIS_PHP_VERSION = 5.* ]]; then echo "extension=mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; else COMPOSER_FLAGS="$COMPOSER_FLAGS --ignore-platform-reqs"; fi
-    - if [[ $TRAVIS_PHP_VERSION = 5.* ]]; then composer remove --dev alcaeus/mongo-php-adapter --no-update; fi
+    - pecl install mongodb
     - composer self-update
     - if [[ "$SYMFONY_VERSION" != "" ]]; then composer require "symfony/framework-bundle:${SYMFONY_VERSION}" --no-update; fi
 
@@ -42,7 +27,7 @@ script:
     - php vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
 after_success:
-    - travis_retry php vendor/bin/coveralls
+    - travis_retry php vendor/bin/php-coveralls
 
 notifications:
     email:
