--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Tomáš Pecsérke",
+            "name": "Tomas Pecserke",
             "email": "tomas.pecserke@gmail.com",
             "role": "Developer"
         }
@@ -16,36 +16,39 @@
         "psr-4": { "Pecserke\\YamlFixturesBundle\\": "" }
     },
     "require": {
-        "php": ">=5.3.9",
-        "doctrine/data-fixtures": "~1.0",
-        "symfony/framework-bundle": "~2.3|~3.0",
-        "symfony/http-kernel": "~2.3|~3.0",
-        "symfony/dependency-injection": "~2.3|~3.0",
-        "symfony/config": "~2.3|~3.0",
-        "symfony/console": "~2.3|~3.0",
-        "symfony/filesystem": "~2.3|~3.0",
-        "symfony/yaml": "~2.3|~3.0",
-        "symfony/property-access": "~2.3|~3.0",
-        "symfony/finder": "^2.0.5|~3.0"
+        "php": "^7.2",
+        "doctrine/data-fixtures": "^1.3",
+        "symfony/framework-bundle": "^4.3",
+        "symfony/http-kernel": "^4.3",
+        "symfony/dependency-injection": "^4.3",
+        "symfony/config": "^4.3",
+        "symfony/console": "^4.3",
+        "symfony/filesystem": "^4.3",
+        "symfony/yaml": "^4.3",
+        "symfony/property-access": "^4.3",
+        "symfony/finder": "^4.3"
     },
     "require-dev": {
-        "doctrine/doctrine-bundle": "*",
-        "doctrine/orm": ">=2.2",
-        "doctrine/mongodb-odm": "~1.0",
-        "phpunit/phpunit": ">=4.3",
-        "alcaeus/mongo-php-adapter": "^1.0.3",
-        "satooshi/php-coveralls": "~1.0",
-        "mikey179/vfsStream": "~1.0"
+        "doctrine/doctrine-bundle": "^1.11",
+        "doctrine/orm": "^2.6",
+        "doctrine/mongodb-odm": "^2.0",
+        "phpunit/phpunit": "^8.4.1",
+        "php-coveralls/php-coveralls": "^2.1",
+        "mikey179/vfsstream": "^1.6"
+    },
+    "scripts": {
+        "test": [
+            "vendor/bin/phpunit"
+        ]
     },
     "suggest": {
         "doctrine/orm": "Support for relation database fixtures",
-        "doctrine/mongodb-odm": "Support for mongo database fixtures",
-        "alcaeus/mongo-php-adapter": "PHP 7 bridge for ext-mongo using ext-mongodb"
+        "doctrine/mongodb-odm": "Support for mongo database fixtures"
     },
     "minimum-stability": "stable",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.1.x-dev"
         }
     }
 }
