--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
     "minimum-stability": "stable",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1.x-dev"
+            "dev-master": "2.0.x-dev",
+            "dev-1.1.x": "1.1.x-dev"
         }
     }
 }
