--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require": {
         "php": "^7.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
         "doctrine/data-fixtures": "^1.3",
         "symfony/framework-bundle": "^4.3",
         "symfony/http-kernel": "^4.3",
@@ -29,10 +30,11 @@
         "symfony/finder": "^4.3"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-master",
         "doctrine/doctrine-bundle": "^1.11",
         "doctrine/orm": "^2.6",
         "doctrine/mongodb-odm": "^2.0",
-        "phpunit/phpunit": "^8.4.1",
+        "phpunit/phpunit": "^8.4",
         "php-coveralls/php-coveralls": "^2.1",
         "mikey179/vfsstream": "^1.6"
     },
