--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,23 +8,18 @@
          convertWarningsToExceptions="true"
          processIsolation="false"
          stopOnFailure="false"
-         bootstrap="Tests/bootstrap.php"
+         bootstrap="test/bootstrap.php"
 >
 
     <testsuites>
-        <testsuite name="PecserkeYamlFIxturesBundle test suite">
-            <directory suffix="Test.php">./Tests</directory>
+        <testsuite name="PecserkeYamlFixturesBundle test suite">
+            <directory suffix="Test.php">./test</directory>
         </testsuite>
     </testsuites>
 
     <filter>
         <whitelist>
-            <directory>./</directory>
-            <exclude>
-                <directory>./Resources</directory>
-                <directory>./Tests</directory>
-                <directory>./vendor</directory>
-            </exclude>
+            <directory>./src</directory>
         </whitelist>
     </filter>
 </phpunit>
