replaces class references

--- a/Tests/Fixtures/AcmeDemoBundle/Resources/fixtures/example_2.yml
+++ b/Tests/Fixtures/AcmeDemoBundle/Resources/fixtures/example_2.yml
@@ -1,4 +1,4 @@
-Pecserke\YamlFixturesBundle\Tests\Fixtures\DataTransformer\ExampleObject:
+Pecserke\YamlFixturesBundle\Stubs\ExampleObject:
     order: 2
     equal_condition: [ publicProperty ]
     data:
